<resources>
    <string name="app_name">Patrema</string>
    <string-array name="marital_status">
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
    </string-array>
    <string-array name="list_blood">
        <item>A</item>
        <item>O</item>
        <item>AB</item>
        <item>B</item>
    </string-array>
    <string-array name="severity_level">
        <item>Urgent</item>
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>
    <string name="status">Status</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="terms">Terms and Conditions</string>
    <string name="welcomeLogin_text">Login</string>
    <string name="welcomeRegister_text">Register</string>
    <string name="welcome_main_text">Welcome to Ibitech</string>
    <string name="welcome_ibitech_logo">Ibitech logo</string>
    <string name="imgContentDescription">Ibitech logo</string>
    <string name="txtLogin">Login</string>
    <string name="hint_idNumber">ID Number</string>
    <string name="hint_CellphoneNum">Cellphone Number</string>
    <string name="hint_password">Enter Password</string>
    <string name="txtLoginBtn">Login</string>
    <string name="txtForgot_password">Forgot password</string>
    <string name="txtNewRegister"><u>Register</u></string>
    <string name="txtNew_user">New User?</string>
    <string name="txtTermsandConds">By signing in you agree to our <u>privacy policy</u> and <u>terms and conditions</u>.</string>
    <string name="txtToggleShow">SHOW</string>
    <string name="txtToggleHide">HIDE</string>
    <string name="txtUserProfilePic">User profile picture</string>
    <string name="txtNotSet">Not Set</string>
    <string name="txtAge">Age:</string>
    <string name="userAge">-</string>
    <string name="txtGender">Gender:</string>
    <string name="userGender">-</string>
    <string name="txtBloodType">Blood Type:</string>
    <string name="userBType">-</string>
    <string name="txtStatus">Status:</string>
    <string name="userStatus">-</string>
    <string name="userAddress">-</string>
    <string name="logout">Log Out</string>
    <string name="txtManage_medical_aid">Manage Medical Aid</string>
    <string name="txtMedical_aid">Medical Aid</string>
    <string name="txtManage_next_of_kin">Manage Next Of Kin</string>
    <string name="txtNext_of_kin">Next Of Kin</string>
    <string name="txtMedical_aid_icon">Medical aid icon</string>
    <string name="txtNext_of_kin_icon">Next of kin icon</string>
    <string name="txtManage_allergies">Manage Allergies</string>
    <string name="txtAllergies">Allergies</string>
    <string name="txtDevices_icon">Devices icon</string>
    <string name="txtDevices">Devices</string>
    <string name="txtRequest_device">Request Device</string>
    <string name="txtManage_allergies_icon">Manage Allergies icon</string>
    <string name="txtManage_symptoms">Manage symptoms</string>
    <string name="txtManage_symptoms_icon">Manage symptoms icon</string>
    <string name="txtSymptoms">Symptoms</string>
    <string name="txtCondition_icon">Condition icon</string>
    <string name="txtManage_conditions">Manage diagnoses</string>
    <string name="txtConditions">Diagnosis</string>
    <string name="txtHint_Email_address">E-mail Address</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Done</string>
    <string name="welcome_to_ibitech">Welcome to Ibitech</string>
    <string name="be_your_own_patient">Be your own patient</string>
    <string name="already_a_user">Already a User?</string>
    <string name="by_registering_you_agree_to_our_terms_and_conditions_and_privacy_policy">By registering, you agree to our Terms and Conditions and Privacy Policy.</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="weak">Weak</string>
    <string name="create_password">Create Password</string>
    <string name="register">Register</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="navdemo">Navigation Drawer Full Demo</string>
    <string name="gallery">This is GALLERY Activity</string>
    <string name="fileimport">This is FILE IMPORT Activity</string>
    <string name="slideshow">This is SLIDE SHOW Activity</string>
    <string name="action_settings">settings</string>
    <string name="appmenuname">appmenuname</string>
    <string name="appmenuname1">Gallery Mall Online</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="help">Help</string>
    <string-array name="doctors">
        <item>Dr Edward Jonas</item>
        <item>Dr Vuyiswa Mazibuko</item>
        <item>Dr Zach Leech</item>
    </string-array>
    <string name="ibitech_logo">Ibitech logo</string>
    <string name="day_month_year">DAY / MONTH / YEAR</string>
    <string name="choose_practitioner">Choose Practitioner :</string>
    <string name="request_device">Request Device</string>
    <string name="device_name">Device Name</string>
</resources>