<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.divide.ibitech.divide_ibitech.Welcome"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/topPart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomPart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/welcome_ibitech_logo"
            android:src="@drawable/logo2"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="cursive"
            android:text="@string/be_your_own_patient"
            android:textAlignment="center"
            android:textColor="@color/endblue"
            android:textSize="32sp"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomPart"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPart">

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:text="User Type"
                android:textOff="Off"
                android:textOn="On"
                android:textSize="25sp"
                android:layout_marginLeft="27dp"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/cherrie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cherrie"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:background="@drawable/secondarybuttonstyle"
                android:padding="8dp"
                android:text="@string/txtNewRegister"
                android:textColor="#fff"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/buttonstyle"
                android:padding="8dp"
                android:text="@string/txtLogin"
                android:textColor="#fff"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>



    </LinearLayout>


</android.support.constraint.ConstraintLayout>
